--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ h4 {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background: #ffffff;
+  background: transparent;
   padding: 20px;
   border-radius: 15px;
 }
@@ -894,7 +894,7 @@ h4 {
 
 
 .notifications-container {
-  background: #ffffff;
+  background: transparent;
 }
 
 .notification-item {
@@ -1050,7 +1050,7 @@ h4 {
 
 .shopping-cart-container {
   padding: 20px;
-  background: #ffffff;
+  background: transparent;
   border-radius: 15px;
   position: relative;
 }
